--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 <script type="text/javascript" src="js/jquery-1.11.3.min.js?v=101"></script>
-<title>รับออกแบบติดตั้งกระจกอลูมิเนียม ติดต่อสอบถาม ปรึกษา ประเมินราคา ดูหน้างานไม่มีค่าใช้จ่าย !!! กรุงเทพฯและปริมณฑล  -เจพีแอล อลูมิเนียม แอนด์ กลาส</title>
+<title>รับออกแบบติดตั้งกระจกอลูมิเนียม ติดต่อสอบถาม ปรึกษา ประเมินราคา ดูหน้างานไม่มีค่าใช้จ่าย !!! กรุงเทพฯและปริมณฑล  เจพีแอล อลูมิเนียม แอนด์ กลาส</title>
 
 </head>
 
