--- a/index.html
+++ b/index.html
@@ -22,32 +22,20 @@
 <link rel="stylesheet" type="text/css" href="css/product.css?v=101">
 
 <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
+<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.3.min.js?v=101"></script>
 <title>รับออกแบบติดตั้งกระจกอลูมิเนียม ติดต่อสอบถาม ปรึกษา ประเมินราคา ดูหน้างานไม่มีค่าใช้จ่าย !!! กรุงเทพฯและปริมณฑล  เจพีแอล อลูมิเนียม แอนด์ กลาส</title>
-
 </head>
 
 <body>
 <!-- Header -->
 <div class="navbar-wrapper">
   <div class="bgblue">
-    <div class="container">
-      <div class="row m0">
-        <div class="col-xs-12 col-sm-8 p5 white font14">TEL: 080-503-1399,081-483-7864 | Line ID: @jplaluminium</div>
-        <div class="col-xs-12 col-sm-4 text-right hidden-xs">
-          <a href="https://www.facebook.com/jplaluminium/" target="_blank"><img src="images/faceicon1.png" width="30"></a>
-          <a href="https://line.me/R/ti/p/%40jplaluminium" target="_blank"><img src="images/lineicon1.png" width="30"></a>
-          <img src="images/google.png" width="30">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default">
       <div class="container" style="padding:0 15px;">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -65,10 +53,25 @@
               <li><a href="review.php">รีวิวลูกค้า</a></li>
               <li><a href="contact.php">ติดต่อเรา</a></li>
             </ul>
-        </div><!-- /.container -->
+        </div>
+        <!-- /.container -->
       </div>
-  </nav>
+    </nav>  
+    <div class="container">
+      <div class="row m0">
+        <div class="col-xs-12 col-sm-8 p5 white font14">TEL: 080-503-1399,081-483-7864 | Line ID: @jplaluminium</div>
+        <div class="col-xs-12 col-sm-4 text-right hidden-xs">
+          <a href="https://www.facebook.com/jplaluminium/" target="_blank"><img src="images/faceicon1.png" width="30"></a>
+          <a href="https://line.me/R/ti/p/%40jplaluminium" target="_blank"><img src="images/lineicon1.png" width="30"></a>
+          <img src="images/google.png" width="30">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
  </div>
+
 <!-- Body -->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -109,8 +112,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 font16" data-aos="fade-right">
-        <br><p><span class="blue">บริษัท เจพีแอล อลูมิเนียม แอนด์ กลาส จำกัด </span> ให้บริการติดตั้งกระจกอลูมิเนียม หน้าต่าง/ประตู บานเลื่อน บานสวิง บานกระทุ้ง กั้นห้องกระจกทุกรูปแบบ กระจกเทมเปอร์กั้นห้องน้ำ กระจกเงาติดผนัง มุ้งลวด  ตู้กระจก (เสื้อผ้า,รองเท้า) กระจกชั้นวางของ รวมไปถึงงานฝ้า ฉาบเรียบ ทีบาร์ กั้นห้องผนังเบา ให้แก่บ้านพักอาศัย อาคารสำนักงาน คอนโด หมู่บ้าน โรงเรียน สถานที่ราชการ เป็นต้น <br>
-<br>ดำเนินงานติดตั้งโดยช่างผู้เชี่ยวชาญ และชำนาญในเรื่องงานกระจกอลูมิเนียมเป็นอย่างดี การันตีจากประสบการณ์งานมากกว่า40 ปี รวมไปถึงการเลือกใช้วัสดุอุปกรณ์ที่มีคุณภาพได้มาตรฐาน มีความแข็งแรงทนทานต่ออายุการใช้งาน ทางเราใส่ใจกับการบริการตั้งแต่เริ่มต้นคุยแบบ ปรึกษางาน ไปจนถึงเสร็จสิ้นงาน และบริการหลังการขายเป็นอย่างดี ทำให้เราได้รับความไว้วางใจจากลูกค้ามากมาย <br>
+        <br><p><span class="blue">บริษัท เจพีแอล อลูมิเนียม แอนด์ กลาส จำกัด </span> ให้บริการติดตั้งกระจกอลูมิเนียม หน้าต่าง/ประตู บานเลื่อน บานสวิง บานกระทุ้ง กั้นห้องกระจกทุกรูปแบบ กระจกเทมเปอร์กั้นห้องน้ำ 
+          กระจกเงาติดผนัง มุ้งลวด  ตู้กระจก (เสื้อผ้า,รองเท้า) กระจกชั้นวางของ รวมไปถึงงานฝ้า ฉาบเรียบ ทีบาร์ กั้นห้องผนังเบา ให้แก่บ้านพักอาศัย อาคารสำนักงาน คอนโด หมู่บ้าน โรงเรียน สถานที่ราชการ เป็นต้น <br>
+<br>ดำเนินงานติดตั้งโดยช่างผู้เชี่ยวชาญ และชำนาญในเรื่องงานกระจกอลูมิเนียมเป็นอย่างดี การันตีจากประสบการณ์งานมากกว่า40 ปี รวมไปถึงการเลือกใช้วัสดุอุปกรณ์ที่มีคุณภาพได้มาตรฐาน มีความแข็งแรงทนทานต่ออายุการใช้งาน 
+ทางเราใส่ใจกับการบริการตั้งแต่เริ่มต้นคุยแบบ ปรึกษางาน ไปจนถึงเสร็จสิ้นงาน และบริการหลังการขายเป็นอย่างดี ทำให้เราได้รับความไว้วางใจจากลูกค้ามากมาย <br>
 <br>ทางเรารับปรึกษา ประเมินราคาเบื้องต้นฟรี! ไม่คิดค่าใช้จ่ายเพิ่มเติม โดยลูกค้าสามารถส่งแบบ ขนาด รายละเอียดต่างๆมาที่ Line : @jplaluminium ทางเรายินดีให้บริการค่ะ ^^<br>
         
 		<div class="borderbox"></div>
@@ -294,9 +299,18 @@ $(document).ready(function () {
 </script>
 <script src="js/aos.js"></script>
 <script>
+$('.lightbox').each(function() { // the containers for all your galleries
+    $(this).magnificPopup({
+        delegate: 'a', // the selector for gallery item
+        type: 'image',
+        gallery: {enabled:true}
+    });
+});
+</script>
+<script>
     AOS.init({
         easing: 'ease-in-out-sine' });
 </script>
-
+</body>
 <!--</body>-->
 </html>
